# orbit-echo

./: CMakeLists.txt  README.md  dsp_delay_line.h  dsp_diffuser.h  dsp_filters.h  dsp_utils.h  example_orbit_delay.cpp  orbit_delay_core.cpp  orbit_delay_core.h  plan.md  remove_wetelement.js
.github/workflows/: build  build.yml  gh-pages.yml
core/: CMakeLists.txt
core/include/: dsp_delay_line.h  dsp_diffuser.h  dsp_filters.h  dsp_modulation.h  dsp_nonlinear.h  dsp_smoother.h  dsp_utils.h  orbit_delay_c_api.h  orbit_delay_core.h
core/src/: orbit_delay_c_api.cpp  orbit_delay_core.cpp
docs/: esp32s3_parametros_interface.md
targets/embedded_esp32s3/: CMakeLists.txt
targets/embedded_esp32s3/main/: CMakeLists.txt  app_main.cpp  audio_engine_esp32.cpp  audio_engine_esp32.h  audio_source.cpp  audio_source.h  board_config.h  parameter_bridge.cpp  parameter_bridge.h  ui_app.h  ui_tft.cpp  ui_tft.h
targets/embedded_esp32s3/main/hw/: display.h  input.h
targets/wasm/: CMakeLists.txt  orbit_delay_wasm.cpp
targets/wasm/js/: demo.js  index.html  node.js  ui.js  wasm_main.cpp  worklet-processor.js
tests/: CMakeLists.txt  render_golden.cpp  test_delay_line.cpp  test_filters.cpp  test_orbit_delay.cpp  test_parameter_bridge.cpp
tests/golden/: orbit_delay_reference.txt
